# METIS

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  metis_sanitizers.cmake.in
GKlib/: CMakeLists.txt  GKlib.h  GKlibSystem.cmake  gk_arch.h  gk_internal_rename.h  gkregex.c  ms_stdint.h  string.c
GKlib/test/: CMakeLists.txt
conf/: gkbuild.cmake  metis.h.in  metis_config.h.in
include/: metis.h
libmetis/: CMakeLists.txt  frename.c  frename_i64.c  gklib_rename.h  metislib.h  ometis.c  parmetis.c  rename.h  rename_i64.h
programs/: CMakeLists.txt  gpmetis.c  metisbin.h  mpmetis.c  ndmetis.c
